# libfranka_motion_test

./: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  joint_point_to_point_motion  joint_point_to_point_motion.cpp  joint_trajectory_pub  joint_trajectory_pub.cpp  start.sh
atomic_configure/: .rosinstall  local_setup.sh  setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
